# sitnikov-solver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.yaml  plot_portrait.py
poincare_app/: CMakeLists.txt  main.cpp
sitnikov_app/: CMakeLists.txt  main.cpp
sitnikov_lib/: CMakeLists.txt  sitnikov.cpp
sitnikov_lib/include/: sitnikov.hpp
